# stringconversion

./: CMakeLists.txt  README.md
conan-recipe/: conanfile.py  test.bat
conan-recipe/test_package/: example.cpp
projects/stringconversion/include/stringconversion/: Containers.h  Definitions.h  Fundamentals.h  StringMap.h
projects/tester/: CMakeLists.txt
projects/tester/source/: Containers.cpp  Fundementals.cpp  StringMap.cpp  main.cpp
